Wed Oct 25 20:17:13 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Hash_Map_Manager_T.inl (ACE_Hash_Map_Iterator_Base_Ex):

          Removed commented ACE_TRACE macro entirely.  Fuzz parses
          commented out code, and still incorrectly reports an ACE_TRACE
          mismatch.

        * ace/Truncate.h:

          Yet another attempt at placating Borland C++.  Removed the
          partial specialization for truncating values of the same type.
          Typedefed the underlying Truncator structure template to further
          simplify the function call.

Wed Oct 25 18:31:47 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * examples/C++NPv1/Reactive_Logging_Server.h:
        * examples/IPC_SAP/SOCK_SAP/CPP-inclient.cpp:

          Include "ace/Basic_Types.h" to pull in intptr_t typedef.

Wed Oct 25 15:05:42 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_stdlib.inl (atop): s/intptr/intptr_t/ in ACE_WIN64 case.

Wed Oct 25 09:47:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/SOCK_Dgram.cpp:
	  Fixed compile error in non win32 part

Wed Oct 25 09:24:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/ace_for_tao.mpc:
	  Added Rtems_init.c, for rtems without network support we
	  also use the ace_for_tao base project

Wed Oct 25 08:38:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/config-rtems.h:
	* ace/OS_NS_netdb.inl:
	  Added ACE_LACKS_GETHOSTBYADDR_R

Wed Oct 25 08:11:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/config-rtems.h:
	* ace/OS_NS_sys_socket.inl:
	  Added ACE_LACKS_GETSOCKOPT, ACE_LACKS_RECV, ACE_LACKS_SEND,
	  and ACE_LACKS_SENDTO

Wed Oct 25 08:04:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tests/Priority_Buffer_Test.cpp:
	  Fixed compile problem with gcc 2.96

Wed Oct 25 07:58:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/config-rtems.h:
	* ace/OS_NS_sys_socket.inl: